[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://src/systems/world/interactive_door.gd" id="1_script"]

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(0.35, 0.2, 0.1, 1, 0.2, 0.1, 0.05, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_closed"]
gradient = SubResource("Gradient_1")
width = 16
height = 32
fill_from = Vector2(0, 0)
fill_to = Vector2(0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phys"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_detect"]
size = Vector2(40, 32)

[node name="Door" type="StaticBody2D"]
collision_layer = 1
collision_mask = 0
script = ExtResource("1_script")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_closed")
centered = false
offset = Vector2(0, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -16)
shape = SubResource("RectangleShape2D_phys")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(8, -16)
shape = SubResource("RectangleShape2D_detect")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_body_exited"]
